========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'v2' branch.
The master branch will rely on the Git repository history.


2020-11-15

 - Render the tolerance in Balance directives (merged from Aaron Lindsay).


2020-11-01

 - In the process of removing dependencies to the beancount.ops.holdings module,
   significantly sped up the net-worth-over-time script by using simple
   aggregation to an inventory (which is how it should be done).
 - Allow balance_by_account() method to compress positions that aren't booked,
   as an option.
 - Added split() method to Inventory, like segregate_units but with no
   constraints.
 - Fixed #255: Added a new beancount.core.prices.project() method to project
   prices to another cost currency.


2020-10-26

 - Fixed Github Actions workflows and Wheel generation.
 - Released 2.3.3 to trigger new binaries.


2020-10-25

 - Removed the part of setup_test checks running the binaries with --help, as
   they fail starting at 3.8. Someone with more time would create a test using
   pytest-virtualenv.


2020-10-17

 - Fixed #566: Duplicate postings on entries should count toward distinct
   hashes.


2020-10-10

 - Moved Emacs support to its own repository
   (http://github.com/beancount/beancount-mode).


2020-09-12

 - Added metadata on implicitly generated Price directives (from implicit_prices
   plugin).


2020-09-12

 - Released 2.3.2.


2020-09-07

 - Fixed #401: Fixed initialization bugs on min() and max() functions for the SQL
   aggregator.
 - Fixed #364: Fixed important core bug in how the CostSpec were converted to
   Cost for cost specs with total and per-unit cost numbers, like this {106.935
   # 6.98 USD}. For short positions, the cost was computed as negative. In a
   sense this was a naive bug, but a very important one. This occurred only for
   short positions.


2020-08-19

 - Added an option to the printer to allow an arbitraty Python value to be